# mt5700webui-openwrt-server

./: .gitignore  README.md
at-webserver/: Cargo.toml  Makefile  README.md
at-webserver/files/etc/config/: at-webserver
at-webserver/files/etc/init.d/: at-webserver
at-webserver/files/www/5700/sms/: index.html
at-webserver/src/: client.rs  config.rs  connection.rs  dial_monitor.rs  handlers.rs  main.rs  models.rs  network.rs  notifications.rs  pdu.rs  schedule.rs  server.rs  syslog.rs
at-webserver/srcs/src/: main.rs
luci-app-at-webserver/: README.md
luci-app-at-webserver/htdocs/luci-static/resources/view/at-webserver/: config.js  logs.js  syslog.js  webui.js
luci-app-at-webserver/po/zh_Hans/: at-webserver.po
luci-app-at-webserver/root/usr/share/luci/menu.d/: luci-app-at-webserver.json
luci-app-at-webserver/root/usr/share/rpcd/acl.d/: luci-app-at-webserver.json
